#97459 - Improve notifications accessibility

--- a/Magento_Theme/templates/messages.phtml
+++ b/Magento_Theme/templates/messages.phtml
@@ -69,12 +69,12 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 <section id="messages"
          x-data="initMessages()"
          x-bind="eventListeners"
-         aria-live="polite"
-         role="status"
+         aria-live="assertive"
+         role="alert"
 >
     <template x-if="!isEmpty()">
         <div class="w-full">
-            <div role="alert" class="messages container mx-auto py-3">
+            <div class="messages container mx-auto py-3">
                 <template x-for="(message, index) in messages" :key="index">
                     <div>
                         <template x-if="message">
@@ -84,7 +84,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                                 <span x-html="message.text"></span>
                                 <button
                                     class="close cursor-pointer"
-                                    aria-label="close"
+                                    aria-label="<?= $escaper->escapeHtml(__('close message')) ?>"
                                     @click.prevent="removeMessage(index)"
                                 >
                                     <?= $heroicons->xHtml('text-white', 18, 18); ?>
