97515 update table label

--- a/Magento_Downloadable/templates/customer/products/list.phtml
+++ b/Magento_Downloadable/templates/customer/products/list.phtml
@@ -34,7 +34,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 <?php if (count($items)): ?>
 <div
     class="downloadable-products card mb-4"
-    aria-describedby="downloadableProducts"
+    aria-labelledby="downloadableProducts"
     role="table"
 >
     <div
