--- a/Magento_Sales/templates/order/recent.phtml
+++ b/Magento_Sales/templates/order/recent.phtml
@@ -41,7 +41,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
     <div
         role="table"
         class="block-content"
-        aria-describedby="recentOrders"
+        aria-labelledby="recentOrders"
     >
         <?= $block->getChildHtml() ?>
         <?php if ($count > 0): ?>
