--- a/Magento_Wishlist/templates/options_list.phtml
+++ b/Magento_Wishlist/templates/options_list.phtml
@@ -16,7 +16,13 @@ use Magento\Wishlist\Block\Customer\Wishlist\Item\Options;
 <?php $options = $block->getOptionList(); ?>
 <?php if ($options): ?>
     <div class="items-center justify-start flex tooltip my-2">
-        <div x-data="{ showTooltip: false }" class="relative z-30 inline-flex">
+        <div
+            x-data="{
+                showTooltip: false,
+                tooltipId: $id('product-details-tooltip')
+            }"
+            class="relative z-30 inline-flex"
+        >
             <button
                 type="button"
                 @mouseover.prevent.stop="showTooltip = true"
@@ -24,14 +30,14 @@ use Magento\Wishlist\Block\Customer\Wishlist\Item\Options;
                 @focus="showTooltip = true"
                 @focusout="showTooltip = false"
                 @keydown.escape="showTooltip = false"
-                aria-labelledby="product_details_tooltip"
+                :aria-labelledby="tooltipId"
             >
                 <?= $escaper->escapeHtml(__('See Details')) ?>
             </button>
             <div class="relative" x-cloak x-show="showTooltip">
                 <div class="shadow-lg">
                     <div
-                        id="product_details_tooltip"
+                        :id="tooltipId"
                         class="
                             absolute top-0 left-0 z-10 w-64 p-2 -mt-6 text-sm leading-tight text-black transform
                             -translate-x-full md:-translate-x-1/3 -translate-y-full bg-white rounded-lg shadow-lg p-4
