#97508 - Update html tag and translation

--- a/Magento_GiftMessage/templates/php-cart/gift-options-container.phtml
+++ b/Magento_GiftMessage/templates/php-cart/gift-options-container.phtml
@@ -233,9 +233,9 @@ $slideOutDrawer = (bool) $block->getSlideOutDrawer();
                     <div class="text-lg font-medium leading-7 text-gray-900" id="enquiry-form-drawer-title-order-gift-options">
                         <?= $escaper->escapeHtml('Order Gift Options') ?>
                     </div>
-                    <div class="absolute top-0 right-0 cursor-pointer" @click="formBlockVisibility=false" aria-label="Close panel" tabindex="0" role="button">
-                        <?= $heroicons->xHtml('inline-block', 24, 24) ?>
-                    </div>
+                    <button class="absolute top-0 right-0 cursor-pointer" @click="formBlockVisibility=false" aria-label="<?= $escaper->escapeHtmlAttr('Close panel') ?>">
+                        <?= $heroicons->xHtml('inline-block', 24, 24, ["aria-hidden" => "true"]) ?>
+                    </button>
                 </div>
                 <?= $block->getChildHtml('gift-options-body') ?>
             </div>
