--- a/Magento_Catalog/templates/product/list/item.phtml
+++ b/Magento_Catalog/templates/product/list/item.phtml
@@ -157,10 +157,9 @@ $imageCustomAttributes = $product->getData('image_custom_attributes')
         <div class="mt-auto pt-3 flex flex-wrap justify-center items-center">
             <?php if ($product->isSaleable()): ?>
             <button class="w-auto btn btn-primary justify-center text-sm
-                        <?= $viewIsGrid ? 'mr-auto' : 'mr-auto md:mr-0' ?>"
-                    aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Cart')) ?>"
+                <?= $viewIsGrid ? 'mr-auto' : 'mr-auto md:mr-0' ?>"
             >
-                <?= $heroicons->shoppingCartHtml("h-6 w-6 border-current inline", 25, 25) ?>
+                <?= $heroicons->shoppingCartHtml("h-6 w-6 border-current inline", 25, 25, ['aria-hidden' => 'true']) ?>
                 <span class="ml-2 inline <?= $viewIsGrid ? 'md:ml-0 md:hidden lg:ml-2 lg:inline' : '' ?>">
                     <?= $escaper->escapeHtml(__('Add to Cart')) ?>
                 </span>
@@ -176,7 +175,7 @@ $imageCustomAttributes = $product->getData('image_custom_attributes')
                     aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Wish List')) ?>"
                     type="button"
                     class="rounded-full w-9 h-9 bg-gray-200 p-0 border-0 inline-flex shrink-0 items-center justify-center text-gray-500 hover:text-red-600 ml-2">
-                <?= $heroiconsSolid->heartHtml("w-5 h-5", 25, 25) ?>
+                <?= $heroiconsSolid->heartHtml("w-5 h-5", 25, 25, ['aria-hidden' => 'true']) ?>
             </button>
             <?php endif; ?>
             <?php if ($showAddToCompare): ?>
@@ -185,7 +184,7 @@ $imageCustomAttributes = $product->getData('image_custom_attributes')
                     aria-label="<?= $escaper->escapeHtmlAttr(__('Add to Compare')) ?>"
                     type="button"
                     class="rounded-full w-9 h-9 bg-gray-200 p-0 border-0 inline-flex shrink-0 items-center justify-center text-gray-500 hover:text-yellow-500 ml-2">
-                <?= $heroicons->scaleHtml("w-5 h-5", 25, 25) ?>
+                <?= $heroicons->scaleHtml("w-5 h-5", 25, 25, ['aria-hidden' => 'true']) ?>
             </button>
             <?php endif; ?>
             <?php if ($addToBlock = $block->getChildBlock('addto')): ?>
