--- a/Magento_Customer/templates/form/register.phtml
+++ b/Magento_Customer/templates/form/register.phtml
@@ -44,7 +44,7 @@ $regionLabel = $block->getAttributeData()->getFrontendLabel('region');
 $minimumPasswordLength = $block->getMinimumPasswordLength();
 $passwordMinCharacterSets = $block->getRequiredCharacterClassesNumber();
 ?>
-<div class="mb-8 max-w-5xl">
+<div class="mb-8">
     <?php /* Extensions placeholder */ ?>
     <?= $block->getChildHtml('customer.form.register.extra') ?>
     <form class="form create account form-create-account"
