#97468 - Add outline during rating selection

--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -94,7 +94,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                                                     </span>
                                                 </label>
                                                 <div
-                                                    class="flex flex-row grow-0"
+                                                    class="flex flex-row grow-0 focus-within:ring-4 ring-primary ring-opacity-50"
                                                     x-data="{ clickedRatingId: 0 }"
                                                 >
                                                     <?php $options = $rating->getOptions(); ?>
