#97448 - Reverted changes, removed translations

--- a/Magento_Theme/templates/html/header/menu/desktop.phtml
+++ b/Magento_Theme/templates/html/header/menu/desktop.phtml
@@ -62,9 +62,16 @@ $block->setData('cache_tags', $viewModelNavigation->getIdentities());
                                         @click="openMenuOnClick('<?= /* @noEscape */ (string) $index ?>')"
                                 >
                                     <?= $heroiconsSolid->chevronDownHtml("flex self-center h-5 w-5", 25, 25, ['aria-hidden' => 'true']) ?>
-                                    <span class="sr-only">
-                                        <?= $escaper->escapeHtml(__('Show submenu for %1 category', $menuItem['name'])) ?>
-                                    </span>
+                                    <template x-if="hoverPanelActiveId === '<?= /* @noEscape */ (string) $index ?>'">
+                                        <span class="sr-only">
+                                            <?= $escaper->escapeHtml(__('Close submenu for %1 category', $menuItem['name'])) ?>
+                                        </span>
+                                    </template>
+                                    <template x-if="hoverPanelActiveId != '<?= /* @noEscape */ (string) $index ?>'">
+                                        <span class="sr-only">
+                                            <?= $escaper->escapeHtml(__('Show submenu for %1 category', $menuItem['name'])) ?>
+                                        </span>
+                                    </template>
                                 </button>
                             <?php endif; ?>
                         </span>
