Dispatch listing-configurable-selection-changed on category page

--- a/Magento_Swatches/templates/product/listing/renderer.phtml
+++ b/Magento_Swatches/templates/product/listing/renderer.phtml
@@ -49,6 +49,19 @@ $swatchItemBlock->setData('product_id', $productId);
                         this.findAllowedAttributeOptions();
                         this.updatePrices();
                         !skipUpdateGallery && this.updateGallery();
+
+                        window.dispatchEvent(
+                            new CustomEvent(
+                                'listing-configurable-selection-changed',
+                                {
+                                    detail: {
+                                        productId: this.productId,
+                                        productIndex: this.productIndex,
+                                        selectedValues: this.selectedValues
+                                    }
+                                }
+                            )
+                        );
                     },
                     updateGallery() {
                         if (!this.productIndex) {
