--- a/Magento_Review/templates/helper/summary.phtml
+++ b/Magento_Review/templates/helper/summary.phtml
@@ -137,7 +137,7 @@ $uniqueId = $productId . uniqid();
 <script>
     'use strict';
 
-    const initRating<?= $uniqueId ?> = () => {
+    function initRating<?= $uniqueId ?>() {
         return {
             reviewsSection: document.getElementById('customer-review-list')
                 || document.getElementById('customer-reviews')
