--- a/web/tailwind/components/product-page.css
+++ b/web/tailwind/components/product-page.css
@@ -34,4 +34,10 @@
             }
         }
     }
+
+    .options-list {
+        .price-wrapper {
+            @apply font-semibold;
+        }
+    }
 }
