--- a/Magento_Theme/templates/html/header.phtml
+++ b/Magento_Theme/templates/html/header.phtml
@@ -138,12 +138,14 @@ $showMiniCart = $storeConfig->getStoreConfig(\Magento\Checkout\Block\Cart\Sideba
                 id="menu-cart-icon"
                 class="relative inline-block ml-1 no-underline sm:ml-3 hover:text-black"
                 x-data="initCartButton()"
-                @click.prevent.stop="showTooltip = true"
-                @focus.prevent.stop="showTooltip = true"
-                @blur.prevent.stop="showTooltip = false"
+                @click="showTooltip = !showTooltip"
+                @click.outside="showTooltip = false"
                 :aria-disabled="isCartEmpty"
                 <?php if ($showMiniCart): ?>
-                    @click.prevent.stop="$dispatch('toggle-cart', { isOpen: true })"
+                    @click.prevent="() => {
+                        !isCartEmpty && $event.stopPropagation()
+                        $dispatch('toggle-cart', { isOpen: true })
+                    }"
                     @toggle-cart.window="isCartOpen = $event.detail.isOpen"
                     :aria-expanded="isCartOpen"
                     aria-haspopup="dialog"
