--- a/Magento_LayeredNavigation/templates/layer/state.phtml
+++ b/Magento_LayeredNavigation/templates/layer/state.phtml
@@ -72,7 +72,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                     <a class="py-2 px-2 text-center block action remove text-primary hover:text-primary-darker"
                        href="<?= $escaper->escapeUrl($filter->getRemoveUrl()) ?>"
                        title="<?= /* @noEscape */ $escaper->escapeHtmlAttr(__('Remove active %1 filtering: %2', $filterName, $filterLabel )) ?>">
-                        <?= $heroicons->trashHtml('', 20, 20); ?>
+                        <?= $heroicons->trashHtml('', 20, 20, ["aria-hidden" => "true"]); ?>
                     </a>
                 </span>
             </div>
