97498 - remove width 100% causing horizontal scroll

--- a/Magento_LayeredNavigation/templates/layer/view.phtml
+++ b/Magento_LayeredNavigation/templates/layer/view.phtml
@@ -34,7 +34,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
     >
         <a
             href="#products-list"
-            class="sr-only focus:not-sr-only bg-blue-600 text-white px-12 py-4 text-center w-full block rounded-sm"
+            class="sr-only focus:not-sr-only bg-blue-600 text-white px-12 py-4 text-center block rounded-sm"
         >
             <?= $escaper->escapeHtml(__('Skip to products list')) ?>
         </a>
